--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "hot-module-replacement": "^3.0.3"
   }
 }
