--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "cuid": "^2.1.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
@@ -33,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "hot-module-replacement": "^3.0.3"
+    "hot-module-replacement": "^3.0.3",
+    "redux-devtools": "^3.5.0"
   }
 }
