--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/react-router-dom": "^4.3.4",
     "cuid": "^2.1.6",
+    "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
+    "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
