--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@types/react-router-dom": "^4.3.4",
     "cuid": "^2.1.6",
+    "date-fns": "^1.30.1",
     "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
+    "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux-toastr": "^7.4.1",
     "hot-module-replacement": "^3.0.3",
     "redux-devtools": "^3.5.0"
   }
