--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "@types/react-router-dom": "^4.3.4",
     "cuid": "^2.1.6",
     "date-fns": "^1.30.1",
+    "firebase": "^6.2.4",
     "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.6",
     "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.3.2",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
