--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "firebase": "^6.2.4",
     "google-map-react": "^1.1.4",
     "react": "^16.8.6",
+    "react-cropper": "^1.2.0",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
