--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-lazyload": "^2.6.2",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
